[CTW] Scroll regions with scroll offset (0,0) do not have cached scroll position
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox115 | --- | fixed |
People
(Reporter: nlapre, Assigned: morgan)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
In a document with a scroll region that's not scrolled, the accessible for the scroll region will have no cached scroll position, making it impossible to tell whether we're actually dealing with a scroll region in RemoteAccessibleBase. This is because of this code in BundleFieldsForCache which avoids caching scroll positions when the position is (0,0), even if we are dealing with a scroll region.
We might be able to use the scrollRange
variable to indicate whether there's a scroll region. If there is, we should send a scroll position, even if it's (0,0), so that we can use the presence/absence of a scroll position as an indicator that a scroll region exists for a given Accessible in RemoteAccessible (see RemoteAccessibleBase::ApplyScrollOffset).
We should also be careful to ensure that we're removing the scroll position from the cache if the Accessible becomes unscrollable for some reason.
Updated•2 years ago
|
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 1•2 years ago
|
||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 3•2 years ago
|
||
Backed out with Bug 1828373 and Bug 1825611 for accessible failures on on /browser_general.js
Comment 4•2 years ago
|
||
Backout merged to central: https://hg.mozilla.org/mozilla-central/rev/8d8d99e75818
Comment 6•2 years ago
|
||
bugherder |
Description
•