Bug 1825411: Cache scroll position for unscrolled scroll frames r=nlapre

Differential Revision: https://phabricator.services.mozilla.com/D176093