accessible/generic/LocalAccessible.cpp
@@ -3532,10 +3532,18 @@ already_AddRefed<AccAttributes> LocalAccessible::BundleFieldsForCache(
     }
   }
 
-  if (aCacheDomain & CacheDomain::ScrollPosition) {
-    nsPoint scrollPosition;
-    std::tie(scrollPosition, std::ignore) = mDoc->ComputeScrollData(this);
-    if (scrollPosition.x || scrollPosition.y) {
+  if (aCacheDomain & CacheDomain::ScrollPosition && frame) {
+    const auto [scrollPosition, scrollRange] = mDoc->ComputeScrollData(this);
+    if (scrollRange.width || scrollRange.height) {
+      // If the scroll range is 0 by 0, this acc is not scrollable. We
+      // can't simply check scrollPosition != 0, since it's valid for scrollable
+      // frames to have a (0, 0) position. We also can't check IsEmpty or
+      // ZeroArea because frames with only one scrollable dimension will return
+      // a height/width of zero for the non-scrollable dimension, yielding zero
+      // area even if the width/height for the scrollable dimension is nonzero.
+      // We also cache (0, 0) for accs with overflow:auto or overflow:scroll,
+      // even if the content is not currently large enough to be scrollable
+      // right now -- these accs have a non-zero scroll range.
       nsTArray<int32_t> positionArr(2);
       positionArr.AppendElement(scrollPosition.x);
       positionArr.AppendElement(scrollPosition.y);
@@ -3865,10 +3873,15 @@ void LocalAccessible::MaybeQueueCacheUpdateForStyleChanges() {
     newStyle->GetComputedPropertyValue(eCSSProperty_overflow, newOverflow);
 
     if (oldOverflow != newOverflow) {
-      RefPtr<nsAtom> oldAtom = NS_Atomize(oldOverflow);
-      RefPtr<nsAtom> newAtom = NS_Atomize(newOverflow);
-      if (oldAtom == nsGkAtoms::hidden || newAtom == nsGkAtoms::hidden) {
+      if (oldOverflow.Equals("hidden"_ns) || newOverflow.Equals("hidden"_ns)) {
         mDoc->QueueCacheUpdate(this, CacheDomain::Style);
+      }
+      if (oldOverflow.Equals("auto"_ns) || newOverflow.Equals("auto"_ns) ||
+          oldOverflow.Equals("scroll"_ns) || newOverflow.Equals("scroll"_ns)) {
+        // We cache a (0,0) scroll position for frames that have overflow
+        // styling which means they _could_ become scrollable, even if the
+        // content within them doesn't currently scroll.
+        mDoc->QueueCacheUpdate(this, CacheDomain::ScrollPosition);
       }
     }
 
